--- a/fdj/apps/fdj-ng/project.json
+++ b/fdj/apps/fdj-ng/project.json
@@ -51,6 +51,10 @@
     },
     "serve": {
       "executor": "@angular-devkit/build-angular:dev-server",
+      "options": {
+        "buildTarget": "fdj-ng:build",
+        "host": "0.0.0.0"
+      },
       "configurations": {
         "production": {
           "buildTarget": "fdj-ng:build:production"
