--- a/fdj/package.json
+++ b/fdj/package.json
@@ -14,8 +14,15 @@
     "@angular/platform-browser-dynamic": "~18.0.0",
     "@angular/router": "~18.0.0",
     "@nx/angular": "19.3.0",
+    "axios": "^1.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^8.4.1",
     "rxjs": "~7.8.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tslib": "^2.3.0",
+    "xvfb": "^0.4.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -29,13 +36,19 @@
     "@angular/compiler-cli": "~18.0.0",
     "@angular/language-service": "~18.0.0",
     "@nx/cypress": "19.3.0",
+    "@nx/esbuild": "19.3.0",
     "@nx/eslint": "19.3.0",
     "@nx/eslint-plugin": "19.3.0",
+    "@nx/express": "^19.3.0",
     "@nx/jest": "19.3.0",
     "@nx/js": "19.3.0",
+    "@nx/node": "19.3.0",
     "@nx/web": "19.3.0",
+    "@nx/webpack": "19.3.0",
     "@nx/workspace": "19.3.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~18.0.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -44,17 +57,22 @@
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
     "@typescript-eslint/utils": "^8.0.0-alpha.28",
-    "cypress": "^13.8.0",
+    "cypress": "^13.11.0",
+    "esbuild": "^0.19.2",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.1.0",
-    "nx": "19.3.0",
+    "nx": "^19.3.0",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.4.2"
-  }
+    "ts-node": "^10.9.1",
+    "typescript": "~5.4.2",
+    "webpack-cli": "^5.1.4"
+  },
+  "nx": {}
 }
