--- a/fdj/tsconfig.base.json
+++ b/fdj/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@fdj/entities": ["entities/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
